--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.1",
     "description": "simple chat app",
     "dependencies": {
+        "express": "^4.16.3",
+        "path": "^0.12.7",
         "socket.io": "^2.0.4"
     },
     "engines": {
