--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "node": "9.4.0"
     },
     "scripts": {
-        "start": "node server/server.js"
+        "start": "nodemon server/server.js"
+    },
+    "devDependencies": {
+        "nodemon": "^1.17.2"
     }
 }
