--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "express": "^4.16.3",
         "path": "^0.12.7",
+        "randomcolor": "^0.5.3",
         "socket.io": "^2.0.4"
     },
     "engines": {
